tooling/nargo_cli/tests/snapshots/execution_success/shift_left_rhs_value_casted_from_smaller_type/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(b: u8) -> pub u64 {
    15877946327378367777_u64 << (b as u64)
}
